# marmotVM

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
include/: microvm.h
src/: microvm.c  microvm_python.c
tests/: test.c
