[build-system]
requires = ["setuptools", "wheel", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "marmotVM"
version = "1.0.0"
description = "BigWeiner MicroVM - Secure Python module execution (C extension)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "BigWeiner Team" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

