[build-system]
requires = ["setuptools", "wheel", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "marmotVM"
version = "1.0.0"
description = "marmotVM - secure custom bytecode virtual machine (C extension)"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.9"
authors = [{ name = "TheMapleseed" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TheMapleseed/marmotVM"
Repository = "https://github.com/TheMapleseed/marmotVM"
Issues = "https://github.com/TheMapleseed/marmotVM/issues"

